Add Flickr images search for !carl command while still looking for a solution for Google images.